Fix the conversion to use 12-bit value

--- a/color-frequency.ipynb
+++ b/color-frequency.ipynb
@@ -39,7 +39,8 @@
     "    return np.mean(rgb_array, axis=(0, 1))\n",
     "\n",
     "def color_to_int(c):\n",
-    "    return 4*c[0] + 2*c[1] + c[2]\n",
+    " The maximum should be 4095 (12-bit)",
+    "    return 256*round(c[0]/16 - 0.5) + 16*round(c[1]/16 - 0.5) + round(c[2]/16 - 0.5)\n",
     "\n",
     "def int_to_freq(i):\n",
     "    return round(MAX_F - ((MAX_F - MIN_F) / (MAX_I - MIN_I))*i)\n",
