--- a/color-frequency.ipynb
+++ b/color-frequency.ipynb
@@ -39,7 +39,7 @@
     "    return np.mean(rgb_array, axis=(0, 1))\n",
     "\n",
     "def color_to_int(c):\n",
-    " The maximum should be 4095 (12-bit)",
+    "# The maximum should be 4095 (12-bit)\n",
     "    return 256*round(c[0]/16 - 0.5) + 16*round(c[1]/16 - 0.5) + round(c[2]/16 - 0.5)\n",
     "\n",
     "def int_to_freq(i):\n",
