--- a/color-frequency.ipynb
+++ b/color-frequency.ipynb
@@ -36,11 +36,11 @@
     "proc = sound_proc(440)\n",
     "\n",
     "def avg_color(rgb_array):\n",
-    "    return np.mean(rgb_array, axis=(0, 1))\n",
+    "    return np.around( np.mean(rgb_array, axis=(0, 1)) )\n",
     "\n",
     "def color_to_int(c):\n",
     "# The maximum should be 4095 (12-bit)\n",
-    "    return 256*round(c[0]/16 - 0.5) + 16*round(c[1]/16 - 0.5) + round(c[2]/16 - 0.5)\n",
+    "    return (c[0] >> 4) + (c[1] >> 4) + (c[2] >> 4) \n",
     "\n",
     "def int_to_freq(i):\n",
     "    return round(MAX_F - ((MAX_F - MIN_F) / (MAX_I - MIN_I))*i)\n",
