--- a/color-frequency.ipynb
+++ b/color-frequency.ipynb
@@ -38,12 +38,9 @@
     "def avg_color(rgb_array):\n",
     "    return np.around( np.mean(rgb_array, axis=(0, 1)) )\n",
     "\n",
-    "def color_to_int(c):\n",
+    "def color_to_freq(c):\n",
     "# The maximum should be 4095 (12-bit)\n",
-    "    return (c[0] >> 4) + (c[1] >> 4) + (c[2] >> 4) \n",
-    "\n",
-    "def int_to_freq(i):\n",
-    "    return round(MAX_F - ((MAX_F - MIN_F) / (MAX_I - MIN_I))*i)\n",
+    "    return 2 *( (c[0] >> 4) + (c[1] >> 4) + (c[2] >> 4) ) \n",
     "\n",
     "# Make a new process every time we need a new frequency\n",
     "def sound_proc(freq):\n",
@@ -60,7 +57,7 @@
     "            while True:\n",
     "                camera.capture(img_output, 'rgb')\n",
     "                proc.kill()  # Kill the old frequency\n",
-    "                freq = int_to_freq(color_to_int(avg_color(img_output)))\n",
+    "                freq = color_to_freq(avg_color(img_output))\n",
     "                proc = sound_proc(freq)\n",
     "                time.sleep(0.1)\n",
     "    except Exception as e:\n",
