All parts assembled

--- a/Ultrasonic.ipynb
+++ b/Ultrasonic.ipynb
@@ -2,67 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bogus!\n",
-      "2230.5309772491455 cm\n",
+      "0.013750553131103516 cm\n",
       "\n",
-      "Bogus!\n",
-      "2341.5215015411377 cm\n",
+      "False cm\n",
       "\n",
-      "128.35407257080078 cm\n",
+      "False cm\n",
       "\n",
-      "17.785072326660156 cm\n",
+      "False cm\n",
       "\n",
-      "17.22574234008789 cm\n",
+      "False cm\n",
       "\n",
-      "17.809391021728516 cm\n",
+      "False cm\n",
       "\n",
-      "17.424345016479492 cm\n",
+      "False cm\n",
       "\n",
-      "17.939090728759766 cm\n",
+      "False cm\n",
       "\n",
-      "19.900798797607422 cm\n",
+      "0.006118297576904297 cm\n",
       "\n",
-      "90.51012992858887 cm\n",
+      "0.005484819412231445 cm\n",
       "\n",
-      "112.19024658203125 cm\n",
+      "0.006670951843261719 cm\n",
       "\n",
-      "94.2227840423584 cm\n",
+      "0.0020902156829833984 cm\n",
       "\n",
-      "135.52403450012207 cm\n",
+      "0.00671076774597168 cm\n",
       "\n",
-      "107.8493595123291 cm\n",
+      "0.001947164535522461 cm\n",
       "\n",
-      "124.59683418273926 cm\n",
+      "0.0014660358428955078 cm\n",
       "\n",
-      "112.95628547668457 cm\n",
+      "0.0017561912536621094 cm\n",
       "\n",
-      "Bogus!\n",
-      "591.163158416748 cm\n",
+      "0.0017414093017578125 cm\n",
       "\n",
-      "92.1030044555664 cm\n",
+      "0.006455421447753906 cm\n",
       "\n",
-      "146.21210098266602 cm\n",
+      "0.006395578384399414 cm\n",
       "\n",
-      "94.07687187194824 cm\n",
+      "0.006854057312011719 cm\n",
       "\n",
-      "151.17716789245605 cm\n",
+      "False cm\n",
       "\n",
-      "95.43466567993164 cm\n",
+      "False cm\n",
       "\n",
-      "75.91080665588379 cm\n",
+      "0.003075838088989258 cm\n",
       "\n",
-      "61.69247627258301 cm\n",
+      "0.0057830810546875 cm\n",
       "\n",
-      "79.55455780029297 cm\n",
+      "0.010882139205932617 cm\n",
       "\n",
-      "61.59520149230957 cm\n",
+      "0.013362646102905273 cm\n",
+      "\n",
+      "0.013423919677734375 cm\n",
+      "\n",
+      "0.013334512710571289 cm\n",
+      "\n",
+      "0.013321161270141602 cm\n",
+      "\n",
+      "0.013347387313842773 cm\n",
+      "\n",
+      "0.01331639289855957 cm\n",
+      "\n",
+      "0.013364076614379883 cm\n",
+      "\n",
+      "0.013212442398071289 cm\n",
       "\n",
       "User interrupted\n"
      ]
@@ -100,7 +111,7 @@
     "    sonic_setup()\n",
     "    try:\n",
     "        while True:\n",
-    "            print(distance(), 'cm')\n",
+    "            print(duration(), 'cm')\n",
     "            print('')\n",
     "            time.sleep(0.3)\n",
     "    except KeyboardInterrupt: print('User interrupted')\n",
@@ -113,18 +124,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
   }
  },
  "nbformat": 4,
