--- a/vision/main.ipynb
+++ b/vision/main.ipynb
@@ -2,15 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "User interrupted\n"
+      "3786 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3788 3276 3788 3786 4914 4366 5460 2696 3276 2150 2730 Labels:\n",
+      "ceiling\n",
+      "structure\n",
+      "daylighting\n",
+      "3276 3276 2184 2184 1604 2698 2184 2184 2184 "
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-49a4f0240d30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0mpid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-49a4f0240d30>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m                 \u001b[0;31m# Color:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m                 \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rgb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m                 \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor_to_freq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg_color\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/camera.py\u001b[0m in \u001b[0;36mcapture\u001b[0;34m(self, output, format, use_video_port, resize, splitter_port, bayer, **options)\u001b[0m\n\u001b[1;32m   1419\u001b[0m             \u001b[0;31m# Wait for the callback to set the event indicating the end of\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1420\u001b[0m             \u001b[0;31m# image capture\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1421\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCAPTURE_TIMEOUT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1422\u001b[0m                 raise PiCameraRuntimeError(\n\u001b[1;32m   1423\u001b[0m                     'Timed out waiting for capture to end')\n",
+      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/encoders.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    393\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 395\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    396\u001b[0m             \u001b[0;31m# Check whether the callback set an exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    397\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexception\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/encoders.py\u001b[0m in \u001b[0;36mstop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    414\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcamera_port\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_encoders_lock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 416\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stop_capture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcamera_port\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    417\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_port\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    418\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/camera.py\u001b[0m in \u001b[0;36m_stop_capture\u001b[0;34m(self, port)\u001b[0m\n\u001b[1;32m    527\u001b[0m                 \u001b[0mport\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_camera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCAMERA_CAPTURE_PORT\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    528\u001b[0m                 len([e for e in self._encoders.values() if e.active]) == 1):\n\u001b[0;32m--> 529\u001b[0;31m             \u001b[0mport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmmal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMMAL_PARAMETER_CAPTURE\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    530\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_check_camera_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/mmalobj.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   1491\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1492\u001b[0m             mmal_check(\n\u001b[0;32m-> 1493\u001b[0;31m                 \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_port\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1494\u001b[0m                 prefix=\"Failed to set parameter %d to %r\" % (key, value))\n\u001b[1;32m   1495\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -33,12 +53,16 @@
     "MAX_T = 0.02352941176\n",
     "TMP_FILE = 'resources/tmp.jpg'\n",
     "\n",
-    "\n",
-    "def dur_to_vol(t):\n",
-    "    return MAX_V - ((MAX_V - MIN_V) / (MAX_T - MIN_T))*t\n",
-    "\n",
+    "# Part I: Regarding sound process\n",
     "def sound_proc(freq):\n",
     "    return subprocess.Popen(['speaker-test', '--frequency', str(freq), '--test', 'sine'])\n",
+    "\n",
+    "def set_volume(percent):\n",
+    "    subprocess.call(['amixer', 'set', 'PCM', str.format('{}%', percent)])\n",
+    "\n",
+    "# Part II: Regarding distance\n",
+    "def dur_to_vol(t):\n",
+    "    return MAX_V - ((MAX_V - MIN_V) / (MAX_T - MIN_T))*t\n",
     "\n",
     "def duration():\n",
     "    GPIO.output(TRIG, 0)\n",
@@ -53,11 +77,14 @@
     "    t = time2 - time1\n",
     "    if (MIN_T < t < MAX_T):\n",
     "        return t\n",
-    "    else:\n",
-    "        return False\n",
     "\n",
-    "def set_volume(percent):\n",
-    "    subprocess.call(['amixer', 'set', 'PCM', str.format('{}%', percent)])\n",
+    "# Part III: Regarding color\n",
+    "def avg_color(rgb_array):\n",
+    "    return np.mean(rgb_array, axis=(0, 1)).astype(int)\n",
+    "\n",
+    "def color_to_freq(c):\n",
+    "    r, g, b = (((c[k]) >> 4) for k in range(3))  # trim 4 bit from each value\n",
+    "    return 2 * ((r << 8) + (g << 4) + b)\n",
     "\n",
     "def main():\n",
     "    with picamera.PiCamera() as camera:\n",
@@ -73,7 +100,7 @@
     "            GPIO.setup(ECHO, GPIO.IN)\n",
     "\n",
     "            # Color setup\n",
-    "            color_array = np.empty((240, 320, 3), dtype=np.uint8)\n",
+    "            rgb_array = np.empty((240, 320, 3), dtype=np.uint8)\n",
     "\n",
     "            # Turn on the sound\n",
     "            pid = sound_proc(440)\n",
@@ -84,13 +111,20 @@
     "                counter += 1\n",
     "                \n",
     "                # Sonic part\n",
-    "                t = duration()\n",
-    "                if t:\n",
+    "                t = duration()  # Gather distance\n",
+    "                if t is not None:\n",
     "                    v = dur_to_vol(t)\n",
     "                    set_volume(v)\n",
     "\n",
-    "                # Vision part (every three seconds)\n",
-    "                if counter == 30:\n",
+    "                # Color:\n",
+    "                camera.capture(rgb_array, 'rgb')\n",
+    "                freq = color_to_freq(avg_color(rgb_array))\n",
+    "                print(freq, end=' ')\n",
+    "                proc = sound_proc(freq)\n",
+    "                proc.kill()  # Kill the old frequency\n",
+    "                    \n",
+    "                # Vision part (not every cycle)\n",
+    "                if counter == 10:\n",
     "                    counter = 0\n",
     "\n",
     "                    # Capture the image to file...\n",
@@ -105,13 +139,13 @@
     "                    labels = response.label_annotations\n",
     "\n",
     "                    print('Labels:')\n",
-    "                    for label in labels:\n",
+    "                    for label in labels[:3]:\n",
     "                        print(label.description)\n",
     "\n",
     "                time.sleep(0.1)  # Periodic sleep to keep the process from being pre-empted\n",
     "\n",
-    "        except KeyboardInterrupt:\n",
-    "            print('User interrupted')\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
     "        finally:\n",
     "            GPIO.cleanup()\n",
     "            pid.kill()\n",
