--- a/vision/main.ipynb
+++ b/vision/main.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3788 3788 3788 3276 2114 1570 1602 2660 0 0 Labels:\n",
-      "1092 1092 1092 2698 3278 0 0 512 512 512 Labels:\n",
-      "546 546 546 546 1058 1060 1092 1092 1092 1092 Labels:\n",
-      "3276 3276 1570 1602 2114 2148 2116 2114 4914 2182 Labels:\n",
-      "3786 5460 5426 4912 3820 5494 5494 4914 2182 2694 Labels:\n",
-      "1570 3240 2728 3240 3240 3240 3240 3240 3240 3240 Labels:\n",
-      "2148 2660 4368 "
+      "2132 2149 1877 2166 2457 1911 1091 1911 1347 Labels:\n",
+      "white\n",
+      "photograph\n",
+      "close up\n",
+      "1637 2457 1911 1911 1911 1911 1620 1074 2457 Labels:\n",
+      "light\n",
+      "lighting\n",
+      "floor\n",
+      "1621 1911 1912 "
      ]
     },
     {
@@ -25,12 +27,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-318f3b46dc77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    119\u001b[0m             \u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-11-318f3b46dc77>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m                 \u001b[0;31m# Color:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m                 \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rgb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m                 \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor_to_freq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg_color\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/camera.py\u001b[0m in \u001b[0;36mcapture\u001b[0;34m(self, output, format, use_video_port, resize, splitter_port, bayer, **options)\u001b[0m\n\u001b[1;32m   1419\u001b[0m             \u001b[0;31m# Wait for the callback to set the event indicating the end of\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1420\u001b[0m             \u001b[0;31m# image capture\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1421\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCAPTURE_TIMEOUT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1422\u001b[0m                 raise PiCameraRuntimeError(\n\u001b[1;32m   1423\u001b[0m                     'Timed out waiting for capture to end')\n",
-      "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/encoders.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    391\u001b[0m         \u001b[0mthe\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mOtherwise\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mit\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m         \"\"\"\n\u001b[0;32m--> 393\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    394\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    547\u001b[0m             \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    548\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 549\u001b[0;31m                 \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    550\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 297\u001b[0;31m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    298\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-8bf35b78c3ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    136\u001b[0m             \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mterminate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 138\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-23-8bf35b78c3ef>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    123\u001b[0m                                     output=True,)\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m                     \u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvolume\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Note the volume\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m                     \u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3/dist-packages/pyaudio.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(self, frames, num_frames, exception_on_underflow)\u001b[0m\n\u001b[1;32m    584\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m         pa.write_stream(self._stream, frames, num_frames,\n\u001b[0;32m--> 586\u001b[0;31m                         exception_on_underflow)\n\u001b[0m\u001b[1;32m    587\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    588\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -43,25 +42,27 @@
     "import subprocess\n",
     "import picamera\n",
     "import numpy as np\n",
+    "import pyaudio\n",
+    "\n",
     "from google.cloud import vision\n",
     "from google.cloud.vision import types\n",
     "\n",
     "TRIG = 11\n",
     "ECHO = 12\n",
-    "MIN_V = 45\n",
-    "MAX_V = 80\n",
+    "MIN_V = 0.3\n",
+    "MAX_V = 1\n",
     "MIN_T = 0.00011764705\n",
     "MAX_T = 0.02352941176\n",
     "TMP_FILE = 'resources/tmp.jpg'\n",
-    "\n",
-    "# Part I: Regarding sound process\n",
-    "def sound_proc(freq):\n",
-    "    return subprocess.Popen(['speaker-test', '--frequency', str(freq), '--test', 'sine'])\n",
+    "FS = 5000       # sampling rate, Hz, must be integer\n",
+    "SENSE_DUR = 3   # no idea what unit this is in, may be float\n",
     "\n",
     "def set_volume(percent):\n",
+    "    \"\"\"OS call to set volume\"\"\"\n",
     "    subprocess.call(['amixer', 'set', 'PCM', str.format('{}%', percent)])\n",
     "\n",
     "def speak(string):\n",
+    "    \"\"\"External voice program process\"\"\"\n",
     "    subprocess.call(['espeak', string])\n",
     "    \n",
     "# Part II: Regarding distance\n",
@@ -69,6 +70,7 @@
     "    return MAX_V - ((MAX_V - MIN_V) / (MAX_T - MIN_T))*t\n",
     "\n",
     "def duration():\n",
+    "    \"\"\"Calculated with sonic sensor\"\"\"\n",
     "    GPIO.output(TRIG, 0)\n",
     "    time.sleep(0.000002)\n",
     "    GPIO.output(TRIG, 1)\n",
@@ -107,30 +109,17 @@
     "            rgb_array = np.empty((240, 320, 3), dtype=np.uint8)\n",
     "\n",
     "            # Turn on the sound\n",
-    "            proc = sound_proc(440)\n",
-    "            set_volume(MIN_V)\n",
+    "            set_volume(50)  # We won't modify the system's volume beyond this point\n",
+    "            p = pyaudio.PyAudio()\n",
     "\n",
     "            counter = 0  # To keep count for Google Vision\n",
     "            while True:\n",
     "                counter += 1\n",
     "                \n",
-    "                # Sonic part\n",
-    "                # t = duration()  # Gather distance\n",
-    "                t = 0.01  # TEST NUMBER!!!!!\n",
-    "                if t is not None:\n",
-    "                    v = dur_to_vol(t)\n",
-    "                    set_volume(v)\n",
-    "\n",
-    "                # Color:\n",
-    "                camera.capture(rgb_array, 'rgb')\n",
-    "                freq = color_to_freq(avg_color(rgb_array))\n",
-    "                print(freq, end=' ')\n",
-    "                proc.kill()  # Kill the old frequency\n",
-    "                proc = sound_proc(freq)  # Create a new one\n",
-    "                    \n",
-    "                # Vision part (not every cycle)\n",
+    "                # Image processing (rare)\n",
     "                if counter == 10:\n",
     "                    counter = 0\n",
+    "                    set_volume(100)\n",
     "\n",
     "                    # Capture the image to file...\n",
     "                    camera.capture(TMP_FILE)\n",
@@ -143,19 +132,48 @@
     "                    response = client.label_detection(image=jpg)\n",
     "                    labels = response.label_annotations\n",
     "\n",
-    "                    proc.kill()  # Stop the noise first\n",
     "                    print('Labels:')\n",
     "                    for label in labels[:3]:\n",
+    "                        print(label.description)\n",
     "                        speak(label.description)\n",
+    "                    set_volume(100)\n",
     "\n",
+    "                # Audio sensing (common)\n",
+    "                else:\n",
+    "                    # Sonic part\n",
+    "                    # t = duration()  # Gather distance\n",
+    "                    t = 0.01  # TEST NUMBER!!!!!\n",
+    "                    if t is not None:\n",
+    "                        volume = dur_to_vol(t)\n",
+    "\n",
+    "                    # Color:\n",
+    "                    camera.capture(rgb_array, 'rgb')\n",
+    "                    freq = color_to_freq(avg_color(rgb_array))\n",
+    "                    print(freq, end=' ')\n",
+    "                    \n",
+    "                    # Play the sound\n",
+    "                    # generate samples, input is frequency\n",
+    "                    samples = (np.sin(2*np.pi*np.arange(FS*SENSE_DUR)*freq/FS)).astype(np.float32)\n",
+    "\n",
+    "                    # for paFloat32 sample values must be in range [-1.0, 1.0]\n",
+    "                    stream = p.open(format=pyaudio.paFloat32,\n",
+    "                                    channels=1,\n",
+    "                                    rate=FS,\n",
+    "                                    output=True,)\n",
+    "\n",
+    "                    stream.write(volume*samples)  # Note the volume\n",
+    "\n",
+    "                    stream.stop_stream()\n",
+    "                    stream.close()\n",
+    "                    \n",
     "                time.sleep(0.1)  # Periodic sleep to keep the process from being pre-empted\n",
     "\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "        finally:\n",
     "            GPIO.cleanup()\n",
-    "            proc.kill()\n",
-    "\n",
+    "            p.terminate()\n",
+    "            \n",
     "main()"
    ]
   }
